[PR-1] - Some hovers added.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <a href="about.html">About</a>
                 </li>
                 <li class="hes-link" style="--i: 1.1s">
-                  <a href="Services"
+                  <a href="#"
                     >Services <i class="fa-solid fa-caret-down"></i
                   ></a>
                   <div class="hes-dropdown">
@@ -90,7 +90,11 @@
         </div>
         <h2>No matter where you're going to, we'll take you there</h2>
         <div class="hes-select-box">
-          <input class="hes-input" type="text" placeholder="Where to?" />
+          <input
+            class="hes-input hes-place"
+            type="text"
+            placeholder="Where to?"
+          />
           <img src="images/line.png" alt="" />
           <select class="hes-input">
             <option value="">Travel Type</option>
