[PR-7] - update .html structure div | edited .css

--- a/index.html
+++ b/index.html
@@ -205,30 +205,34 @@
     <!-- Umut EST START -->
     <div class="homepage-europe-sightseeing-tours">
       <div class="europe-sightseeing-tours-special-container">
+        <img
+          class="est-illustration"
+          src="images/est-illustration.png"
+          alt="est-image"
+        />
         <div class="est-title-box">
-          <img class="est-illustration" src="images/est-illustration.png" alt="est-image"/>
-          <h6 class="est-subtitle">
-            PROMOTION
-          </h6>
+          <h6 class="est-subtitle">PROMOTION</h6>
           <h2 class="est-title">
-            We Provide You Best <br/> Europe Sightseeing Tours
+            We Provide You Best <br />
+            Europe Sightseeing Tours
           </h2>
           <p class="est-paragraph">
-            Et labore harum non nobis ipsum eum molestias mollitia et corporis<br/>
-            prasentium a laudantium internos. Non quis eius quo eligendi corrupti  <br/>
-            et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus <br/>
+            Et labore harum non nobis ipsum eum molestias mollitia et
+            corporis<br />
+            prasentium a laudantium internos. Non quis eius quo eligendi
+            corrupti <br />
+            et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus
+            <br />
             illum aut otio quibusdam!
           </p>
-          <div>
-            <button class="est-button">View Packages</button>
-          </div>
-          <div class="Destination-image-box">
-            <img src="images/Destination 1.png" alt="destination-1"> 
-            <img src="images/Destination 2.png" alt="destination-2">
-            <img src="images/Destination 3.png" alt="destination-3">
-            <img src="images/Destination 4.png" alt="destination-4">
-          </div>
-        </div> 
+          <button class="est-button">View Packages</button>
+        </div>
+        <div class="Destination-image-box">
+          <img src="images/Destination 1.png" alt="destination-1" />
+          <img src="images/Destination 2.png" alt="destination-2" />
+          <img src="images/Destination 3.png" alt="destination-3" />
+          <img src="images/Destination 4.png" alt="destination-4" />
+        </div>
       </div>
     </div>
     <!-- Umut EST END -->
