[PR-1] - Added overflow hidden to body.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
           document
             .querySelector(".hes-title-box")
             .classList.toggle("hes-none", this.checked);
+          if (this.checked) {
+            document.body.style.overflow = "hidden";
+          } else {
+            document.body.style.overflow = "auto";
+          }
         });
     </script>
     <!-- Erkin Hero Section END-->
