Update about.html and abput.css

--- a/about.html
+++ b/about.html
@@ -134,5 +134,15 @@
       </div>
   </div>
   <!-- Esra Explore Packages Section END-->
+  <div class= "wanderlust-video-banner-container">
+    <video
+    class="w-video"
+    autoplay="true"
+    loop
+    >
+    <source src="images/about/about-video01.mp4"/>
+  </video>
+  <h1 class="w-video-title">Wanderlust</h1>
+  </div>
   </body>
 </html>
