[PR-1] - Scroll effect added to html.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -151,7 +151,7 @@
         </div>
       </div>
       <div class="hes-scroll-png">
-        <img src="images/scroll.png" alt="" />
+        <a href="#test"><img src="images/scroll.png" alt="" /></a>
       </div>
     </div>
     <script>
@@ -314,6 +314,7 @@
         </div>
       </div>
     </div>
+    <div id="test"></div>
     <!-- erkin explore section END-->
   </body>
 </html>
