[PR-15] - Video boyutu düzeltildi

--- a/about.html
+++ b/about.html
@@ -12,12 +12,16 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body> 
+  <body>
     <!-- Muruvvet About Page Hero START-->
-      
+
     <!-- Muruvvet About Page Hero END-->
-     <!-- Erkin About Promotion Start-->
+    <!-- Erkin About Promotion Start-->
     <div class="about-promotion">
       <div class="about-promotion-container">
         <div class="pro-title-box">
@@ -50,99 +54,139 @@
     <!-- Esra Explore Packages Section START-->
     <div class="about-explore-packages-section">
       <div class="about-explore-packages-box">
-          <h4 class="about-ep-title-h4">EXPLORE MORE</h4>
-          <h1 class="about-ep-title-h1">Our International Packages</h1>
+        <h4 class="about-ep-title-h4">EXPLORE MORE</h4>
+        <h1 class="about-ep-title-h1">Our International Packages</h1>
       </div>
       <div class="about-explore-packages-container">
-          <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Barcelona</h6>
-                  <h6>$840</h6>
-              </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-barcelona.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Barcelona</h6>
+            <h6>$840</h6>
           </div>
-          <div class="about-city-box">
-              <img src="../images/about/about-city-img-switzerland.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Switzerland</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box span-image">
-              <img src="../images/about/about-city-img-riodejenero.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Rio de Jenero</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona02.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Barcelona</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-tommorowland.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Tommorow Land</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-losangelas.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Los Angelos</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-tommorowland.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Tommorow Land</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona03.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Barcelona</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-maldives.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Maldives</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-              <img src="../images/about/about-city-img-barcelona04.png" class="about-ep-image" alt="city tag image">
-              <div class="about-city-text">
-                  <h6>Barcelona</h6>
-                  <h6>$840</h6>
-              </div>
-              </div>
-              <div class="about-city-box">
-                <img src="../images/about/about-city-img-switzerland.png" class="about-ep-image" alt="city tag image">
-                <div class="about-city-text">
-                    <h6>Switzerland</h6>
-                    <h6>$840</h6>
-                </div>
-                </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-switzerland.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Switzerland</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box span-image">
+          <img
+            src="../images/about/about-city-img-riodejenero.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Rio de Jenero</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-barcelona02.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Barcelona</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-tommorowland.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Tommorow Land</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-losangelas.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Los Angelos</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-tommorowland.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Tommorow Land</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-barcelona03.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Barcelona</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-maldives.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Maldives</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-barcelona04.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Barcelona</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
+        <div class="about-city-box">
+          <img
+            src="../images/about/about-city-img-switzerland.png"
+            class="about-ep-image"
+            alt="city tag image"
+          />
+          <div class="about-city-text">
+            <h6>Switzerland</h6>
+            <h6>$840</h6>
+          </div>
+        </div>
       </div>
-  </div>
-  <!-- Esra Explore Packages Section END-->
-  <div class= "wanderlust-video-banner-container">
-    <video
-    class="w-video"
-    autoplay="true"
-    loop
-    >
-    <source src="images/about/about-video01.mp4"/>
-  </video>
-  <h1 class="w-video-title">Wanderlust</h1>
-  </div>
+    </div>
+    <!-- Esra Explore Packages Section END-->
+    <div class="wanderlust-video-banner-container">
+      <video class="w-video" autoplay loop>
+        <source src="images/about/about-video01.mp4" />
+      </video>
+      <h1 class="w-video-title">Wanderlust</h1>
+    </div>
   </body>
 </html>
