--- a/packages.html
+++ b/packages.html
@@ -16,48 +16,93 @@
   </head>
 
   <body>
-    <div class="location-page-container">
-        <div class="location-page-box">
-            <h3 class="location-box-h3">Tour Plan</h3>
-            <p class="location-box-p">
-                Qui tempore voluptate qui quia commodi rem praesentium alias et
-                voluptates officia sed molestiae sint et voluptas quos. Qui harum
-                repudiandae galisum dolorem Hic deleniti officiis est sapiente
-                explicabo non eaque corporis aut voluptatum iusto At facere enim id
-                voluptas reprehenderit. Ut voluptas laudantium
-              </p>
-            <div class="location-box-gps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.202380737561!2d29.084563975320044!3d40.97704907135498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac64cd4a6eca5%3A0x3c1098978165bc6f!2zU2FocmF5xLEgQ2VkaXQsIEJheWFyIENkLiwgS2FkxLFrw7Z5L8Swc3RhbmJ1bA!5e0!3m2!1str!2str!4v1714046011853!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <p class="location-box-p">
-                Sit quasi soluta non temporibus voluptas non necessitatibus tempore
-                sit deleniti praesentium aut velit nostrum ut itaque atque ad
-                expedita veniam. Hic deleniti officiis est sapiente explicabo non
-                eaque corporis aut voluptatum iusto At facere enim id voluptas
-                reprehenderit. Ut voluptas laudantium et molestias voluptatem ex
-                doloremque omnis est ipsum nihil. <br><br>
-                Quo facere eveniet 33 sint rerum est internos impedit sed
-                dignissimos quia. Et rerum deleniti et voluptates saepe qui labore
-                quisquam non accusantium temporibus. Quo velit numquam hic excepturi
-                sequi sed dicta doloribus! In quos possimus quo quibusdam aliquid
-                est culpa porro sed molestiae libero At blanditiis minima a
-                reiciendis fugiat.
-            </p>
+    <div class="tour-location">
+      <div class="location-navbar container">
+        <div id="location-navbar-box0" class="location-navbar-box" style="background-color: rgb(248, 248, 248);">
+          <img src="../images/location/location-info-logo.png" alt="">
+          <a href="#">Information</a>
         </div>
-        <form class="location-form">
-            <h2 class="form-box-h2">Book This Tour</h2>
-            <p class="form-box-p">
-              Ex optio sequi et quos praesentium in nostrum labore nam rerum iusto
-              aut magni nesciunt? Quo quidem neque iste expedita est dolo.
-            </p>
-            <div class="form-input-box">
-              <div>
-                <img src="../images/location-images/loca-input-user.png" alt="">
-                <input class="form-box-input" type="text" placeholder="Name">
+        <div id="location-navbar-box1" class="location-navbar-box" style="background-color: rgb(248, 248, 248);">
+          <img src="../images/location/locations_calender-logo.png" alt="">
+          <a href="#">Tour Plan</a>
+        </div>
+        <div id="location-navbar-box2" class="location-navbar-box" style="background-color: rgb(255, 255, 255);">
+          <img src="../images/location/icons_location.png" alt="">
+          <a href="#">Location</a>
+        </div>
+        <div id="location-navbar-box3" class="location-navbar-box" style="background-color: rgb(248, 248, 248);">
+          <img src="../images/location/location-gallery-logo.png" alt=""><a href="#">Gallery</a>
+        </div>
+      </div>
+      <div class="location-page-container">
+          <div class="location-page-box">
+              <h3 class="location-box-h3">Tour Plan</h3>
+              <p class="location-box-p">
+                  Qui tempore voluptate qui quia commodi rem praesentium alias et
+                  voluptates officia sed molestiae sint et voluptas quos. Qui harum
+                  repudiandae galisum dolorem Hic deleniti officiis est sapiente
+                  explicabo non eaque corporis aut voluptatum iusto At facere enim id
+                  voluptas reprehenderit. Ut voluptas laudantium
+                </p>
+              <div class="location-box-gps">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3012.202380737561!2d29.084563975320044!3d40.97704907135498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac64cd4a6eca5%3A0x3c1098978165bc6f!2zU2FocmF5xLEgQ2VkaXQsIEJheWFyIENkLiwgS2FkxLFrw7Z5L8Swc3RhbmJ1bA!5e0!3m2!1str!2str!4v1714046011853!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
-            </div>
-            
-          </form>
-    </div>
+              <p class="location-box-p">
+                  Sit quasi soluta non temporibus voluptas non necessitatibus tempore
+                  sit deleniti praesentium aut velit nostrum ut itaque atque ad
+                  expedita veniam. Hic deleniti officiis est sapiente explicabo non
+                  eaque corporis aut voluptatum iusto At facere enim id voluptas
+                  reprehenderit. Ut voluptas laudantium et molestias voluptatem ex
+                  doloremque omnis est ipsum nihil. <br><br>
+                  Quo facere eveniet 33 sint rerum est internos impedit sed
+                  dignissimos quia. Et rerum deleniti et voluptates saepe qui labore
+                  quisquam non accusantium temporibus. Quo velit numquam hic excepturi
+                  sequi sed dicta doloribus! In quos possimus quo quibusdam aliquid
+                  est culpa porro sed molestiae libero At blanditiis minima a
+                  reiciendis fugiat.
+              </p>
+          </div>
+          <form class="location-form">
+              <h2 class="form-box-h2">Book This Tour</h2>
+              <p class="form-box-p">
+                Ex optio sequi et quos praesentium in nostrum labore nam rerum iusto
+                aut magni nesciunt? Quo quidem neque iste expedita est dolo.
+              </p>
+              <div class="form-input-box">
+                <div>
+                  <img src="../images/location/loca-input-user.png" alt="">
+                  <input class="form-box-input" type="text" placeholder="Name">
+                </div>
+                <div>
+                  <img src="../images/location/loca-input-email.png" alt="">
+                  <input class="form-box-input" type="email" placeholder="Mail">
+                </div>
+                <div>
+                  <img src="../images/location/loca-input-email2.png" alt="">
+                  <input class="form-box-input" type="email" placeholder="Confirm Email">
+                </div>
+                <div>
+                  <img src="../images/location/loca-input-phone.png" alt="">
+                  <input class="form-box-input" type="tel" maxlength="11" placeholder="Phone">
+                </div>
+                <input class="form-box-input form-date-box" type="date" placeholder="dd-mm-yy">
+                <div>
+                  <img src="../images/location/loca-input-tag.png" alt="">
+                  <input class="form-box-input" type="text" placeholder="Number of ticket">
+                </div>
+                <div>
+                  <img class="form-textarea-img" src="../images/location/loca-input-masage.png" alt="">
+                  <textarea class="form-box-input" placeholder="Message" name="" id="" cols="30" rows="2"></textarea>
+                </div>
+              </div>
+              <div class="form-buttons-box">
+                <input class="form-box-btn" type="submit" value="Book Now">
+                <input class="form-box-btn" type="submit" value="Check Availability">
+              </div>
+            </form>
+            <img class="location-img-1" src="../images/location/tour-location-img001.png" alt="Travel &amp; Tour">
+            <img class="location-img-2" src="../images/location/tour-location-img002.png" alt="Travel">
+      </div>
+  </div>
   </body>
   </html>
