[PR-13] - Updating div Structures in HTML

--- a/about.html
+++ b/about.html
@@ -20,26 +20,20 @@
     <div class="about-page-hero">
       <div class="hero-container">
         <div class="h-top-nav-bar">
-          <div class="tnb-logo" >
-            <img src="images/logo.png" alt="Logo">
-          </div>
+          <img class="tnb-logo" src="images/logo.png" alt="Logo">
           <div class="tnb-nav-bar">
-            <!-- <div class="nb-nav-elements"> -->
-              <ul class="nb-nav-elements">
-                <li><a href="#"></a>Home</li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Services</li>
-                <li><a href="#"></a>Upcoming Packages</li>
-              </ul>
-            <!-- </div> -->
-            <div class="nb-button">
-              <a href="#">Get In Touch</a>
-            </div>
+            <ul class="nb-nav-elements">
+              <li><a href="#"></a>Home</li>
+              <li><a href="#"></a>About</li>
+              <li><a href="#"></a>Services</li>
+              <li><a href="#"></a>Upcoming Packages</li>
+            </ul>
+            <button class="nb-button">Get In Touch</button>
           </div>
         </div>
         <div class="h-middle-script">
-            <p class="ms-read">READ</p>
-            <p class="ms-about-us">About Us</p>
+          <p class="ms-read">READ</p>
+          <p class="ms-about-us">About Us</p>
         </div>
       </div>
     </div>
