--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Flow+Circular&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Yesteryear&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Muruvvet Header Hero Start-->
@@ -23,10 +24,19 @@
           <img class="tnb-logo" src="images/logo.png" alt="Logo">
           <div class="tnb-nav-bar">
             <ul class="nb-nav-elements">
-              <li><a href="#"></a>Home</li>
-              <li><a href="#"></a>About</li>
-              <li><a href="#"></a>Services</li>
-              <li><a href="#"></a>Upcoming Packages</li>
+              <li><a href="#" target="_blank">Home</a></li>
+              <li class="ne-about"><a href="#" target="_blank">About</a></li>
+                <div class="ne-dropdown-services">
+                  <li><a href="#" target="_blank" class="ne-services">Services<i class="fa fa-caret-down"></i></a>
+                  <ul class="ds-dropdown-menu">
+                    <li><a href="#" target="_blank">Honeymoon Packages</a></li>
+                    <li><a href="#" target="_blank">Tours Packages</a></li>
+                    <li><a href="#" target="_blank">Musical Events</a></li>
+                    <li><a href="#" target="_blank">Build Packages</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li><a href="#" target="_blank">Upcoming Packages</a></li>
             </ul>
             <button class="nb-button">Get In Touch</button>
           </div>
