[PR-6] - html and css structures added.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,18 @@
       </div>
     </div>
     <!-- Muruvvet Favorite resorts END-->
+    <!--erkin homepage-liberty-banner START-->
+    <div class="homepage-liberty-banner">
+      <div class="liberty-banner">
+        <div class="lb-title">
+          <h2>Let's Make Your<br />Next Holiday Amazing</h2>
+        </div>
+        <div class="lb-signature">
+          <img src="images/liberty-statue-Line.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <!--erkin homepage-liberty-banner END-->
     <!-- erkin explore section START-->
     <div class="homepage-explore-section">
       <div class="explore-section-container">
