html ve css biraz bitti

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
@@ -585,5 +593,77 @@
       />
     </div>
     <!-- Muruvvet Testimonials End-->
+    <!-- Yasemin Homepage Footer Start-->
+
+    <footer>
+      <div class="container">
+        <div class="footer-main">
+          <div class="footer-column">
+            <img src="images/footer/Footer travel.jpg" width="90px" />
+
+            <p class="column-1">
+              <small>
+                Travel helps companies <br />
+                manage payments easily.
+              </small>
+            </p>
+            <br />
+            <a href="#" class="social-icon"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+            <a href="#" class="social-icon"
+              ><i class="fa-brands fa-facebook-messenger"></i
+            ></a>
+            <a href="#" class="social-icon"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="#" class="social-icon"
+              ><i class="fa-brands fa-facebook-meta"></i
+            ></a>
+          </div>
+
+          <div class="footer-column">
+            <h3 class="footer-heading">Company</h3>
+            <a href="#" class="footer-link">About Us</a>
+            <a href="#" class="footer-link">Careers</a>
+            <a href="#" class="footer-link">Blog</a>
+            <a href="#" class="footer-link">Pricing</a>
+          </div>
+
+          <div class="footer-column">
+            <h3 class="footer-heading">Destinations</h3>
+            <a href="#" class="footer-link">Maldives</a>
+            <a href="#" class="footer-link">Los Angeles</a>
+            <a href="#" class="footer-link">Las Vegas</a>
+            <a href="#" class="footer-link">Toronto</a>
+          </div>
+
+          <div class="footer-column">
+            <h3 class="footer-heading">Join Our Newsletter</h3>
+
+            <div class="footer-input">
+              <input type="text" placeholder="Your email adress" />
+              <div class="footer-button">
+                <button>Subscribe</button>
+              </div>
+            </div>
+
+            <br />
+            <p class="column-2">
+              . Will send you weekly updates for your better <br />
+              tour packages.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="footer-copyright">
+        <span class="copyright"
+          >Copyright @ Xpro 2022. All Rights Reserved</span
+        >
+      </div>
+    </footer>
   </body>
 </html>
