[PR-6] - Updated html and css sections.

--- a/index.html
+++ b/index.html
@@ -205,11 +205,18 @@
     <!--erkin homepage-liberty-banner START-->
     <div class="homepage-liberty-banner">
       <div class="liberty-banner">
-        <div class="lb-title">
-          <h2>Let's Make Your<br />Next Holiday Amazing</h2>
-        </div>
-        <div class="lb-signature">
-          <img src="images/liberty-statue-Line.png" alt="" />
+        <div class="liberty-banner-container">
+          <img class="lb-images" src="images/liberty-statue-img.png" alt="" />
+          <div class="lb-title-box">
+            <h2 class="lb-title">Let's Make Your<br />Next Holiday Amazing</h2>
+            <div>
+              <img
+                class="lb-signature"
+                src="images/liberty-statue-Line.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
