[FR-15] - design fixed

--- a/about.html
+++ b/about.html
@@ -18,9 +18,6 @@
     />
   </head>
   <body>
-    <!-- Muruvvet About Page Hero START-->
-
-    <!-- Muruvvet About Page Hero END-->
     <!-- Erkin About Promotion Start-->
     <div class="about-promotion">
       <div class="about-promotion-container">
@@ -51,6 +48,14 @@
       </div>
     </div>
     <!-- Erkin About Promotion End-->
+    <!-- Deniz Wanderlust banner start-->
+    <div class="wanderlust-video-banner-container">
+      <video class="w-video" autoplay loop>
+        <source src="images/about/about-video01.mp4" type="video/mp4" />
+      </video>
+      <h1 class="w-video-title">Wanderlust</h1>
+    </div>
+    <!-- Deniz Wanderlust banner end-->
     <!-- Esra Explore Packages Section START-->
     <div class="about-explore-packages-section">
       <div class="about-explore-packages-box">
@@ -182,11 +187,5 @@
       </div>
     </div>
     <!-- Esra Explore Packages Section END-->
-    <div class="wanderlust-video-banner-container">
-      <video class="w-video" autoplay loop>
-        <source src="images/about/about-video01.mp4" />
-      </video>
-      <h1 class="w-video-title">Wanderlust</h1>
-    </div>
   </body>
 </html>
